--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "body": "^5.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "parser": "^0.1.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
