--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "body": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "md5": "^2.3.0",
     "mongoose": "^8.19.3",
     "parser": "^0.1.4"
   },
