--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "md5": "^2.3.0",
     "mongoose": "^8.19.3",
+    "nodemailer": "^7.0.10",
     "parser": "^0.1.4"
   },
   "devDependencies": {
